Fix cancel form entry

--- a/style.css
+++ b/style.css
@@ -101,8 +101,9 @@ input {
 .library-container {
   display: grid;
   grid-auto-flow: column;
-  grid-template-columns: repeat(auto-fill, 1fr);
+  grid-template-columns: repeat(auto-fit, 12rem);
   grid-template-rows: repeat(auto-fit, 1fr);
+  gap: 1rem;
 }
 
 .book-card-nest {
