--- a/style.css
+++ b/style.css
@@ -47,6 +47,10 @@
   transition: 0.1s ease-in-out;
 }
 
+.content-container {
+  display: grid;
+}
+
 .add-book-button, .add-book-button-clicked {
   font-size: 3rem;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -58,6 +62,7 @@
   height: 3rem;
   text-align: center;
   justify-content: center;
+  justify-self: center;
   line-height: 2.8rem;
   transition: color 0.7s, background-color 0.3s, font-size 0.15s;
   margin: 1rem;
